src/scss/main.scss
/* ... */
@media (max-width: 468px) {
  .promos .nav-link {
    padding: 8px 20px;
  }
}

/*--------------------------------------------------------------
# Specials Section
--------------------------------------------------------------*/
.specials {
  background: url("/assets/images/home/hero-promos.jpg") center top no-repeat fixed;
  background-size: cover;
  position: relative;

  &::before {
    content: '';
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    background: rgba(255, 255, 255, 0.9);
    z-index: 9;
  }

  .container {
    position: relative;
    z-index: 10;
  }

  .tab-pane {
    h6 {
      font-weight: 700;
      margin-bottom: 0;
      span {
        color: var(--heading-color) !important;
        font-weight: 500;
      }
    }

    ul {
      list-style: none;
      padding: 0;
      margin-bottom: .5rem;

      li {
        display: flex;

        span {
          color: var(--heading-color) !important;
        }

        .na {
          text-decoration: line-through;
        }
  
      }

      i {
        color: var(--accent-color);
        font-size: 18px;
        padding-right: 5px;
        font-size: 12px;
        line-height: 24px;
      }
    }

    p:last-child {
      margin-bottom: 0;
    }
  }

  @media (max-width: 992px) {
    .tab-content {
      // margin-top: 0;

      .tab-pane {
        padding: 0 15px
      }
    }
  }
}

@media (max-width: 468px) {
  .promos .nav-link {
    padding: 8px 20px;
  }
}

/*--------------------------------------------------------------
# Gallery Section
--------------------------------------------------------------*/
.gallery {
  background-color: var(--surface-color);
  overflow: hidden;

  .swiper-wrapper {
    height: auto;
  }

  .swiper-pagination {
    margin-top: 20px;
    position: relative;

    .swiper-pagination-bullet {
      background-color: var(--background-color);
      border: 1px solid var(--accent-color);
      width: 12px;
      height: 12px;
      opacity: 1;
    }

    .swiper-pagination-bullet-active {
      background-color: var(--accent-color);
    }
  }

  .swiper-slide-active {
    text-align: center;
  }
}

/* Apply max-width 90% to the image inside the GLightbox modal */
.gslide img {
  max-width: 90% !important;
  margin: 0 auto;
  /* Optional: Centers the image */
}

.glightbox-clean .gdesc-inner {
  padding: 10px !important;
  text-align: center;
}

.glightbox-clean .gslide-title {
  max-width: 90% !important;
  margin-bottom: 0 !important;
}

@media (min-width: 992px) {
  .gallery {
    .swiper-wrapper {
      padding: 40px 0;
    }

    .swiper-slide-active {
      background: var(--background-color);
      border: 2px solid var(--accent-color);
      padding: 4px;
      z-index: 1;
      transform: scale(1.1);
      transition: none;
    }
  }

  .glightbox-clean .gdesc-inner {
    background-color: #fff !important;
  }
}
/* ... */

